--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # General
-server.port = 9090
+server.port=9090
 
 # MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -9,8 +9,12 @@ spring.datasource.password=5pr1ngb#t
 
  
 #SPRING DATA JPA
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+# SECURITY
+jwt.secret=secret
+jwt.expiration=3600
+# security.basic.enabled=false
